// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<button
  class="displayValue"
>
  <div
    aria-label="My value"
    class="croppedText"
    title="My value"
  >
    <div
      aria-hidden="true"
      class="front"
    >
      My v
    </div>
    <div
      aria-hidden="true"
      class="back"
    >
      <span>
        alue
      </span>
    </div>
    <div
      class="whole"
    >
      My value
    </div>
  </div>
  <span
    aria-label="su-arrow-down"
    class="toggle su su-arrow-down"
  />
</button>
`;

exports[`The component should render with an icon 1`] = `
<button
  class="displayValue hasIcon"
>
  <span
    aria-label="su-plus"
    class="frontIcon su su-plus"
  />
  <div
    aria-label="My value"
    class="croppedText"
    title="My value"
  >
    <div
      aria-hidden="true"
      class="front"
    >
      My v
    </div>
    <div
      aria-hidden="true"
      class="back"
    >
      <span>
        alue
      </span>
    </div>
    <div
      class="whole"
    >
      My value
    </div>
  </div>
  <span
    aria-label="su-arrow-down"
    class="toggle su su-arrow-down"
  />
</button>
`;
